<resources>
    <string name="app_name">Refugees</string>
    <string name="english">ENGLISH</string>
    <string name="language">LANGUAGE</string>
    <string name="arabic">ARABIC</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="skip">Continue As Guest</string>
    <string name="message">Being searchable allows others to search for you and send you a request, those people might be your family, friends and clients.</string>
    <string name="searchable">Searchable</string>
    <string name="disable">disable</string>
    <string name="enable">enable</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">don\'t have an account?</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="city">City/Village</string>
    <string name="governorate">Governorate</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="we_send_you_link_to_reset_your_password_nplease_check_your_email_address_n">We send you link to reset your password,\nPlease check your email address:\n</string>
    <string name="enter_your_email_address_please">Enter your email address please:</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="reset_password">Reset Password:</string>
    <string name="send">Send</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_is_too_weak">Password must be at least 6 character without spaces</string>
    <string name="email_address_not_register">Email address not registered</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="email_already_used">Email already used</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="quit">Are you sure you want to quit?</string>
    <string name="back">BACK</string>
    <string name="confirm">Please check your e-mail address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="about_us2">We are proud to offer this free application, which is the comprehensive guide for every refugee on Jordanian territory, the application is available in Arabic and English and provides a lot of information on the procedures to be followed immediately after the refugee enters the country through health services and education in order to achieve stability and social integration. It also provides means to communicate with service providers and access to places of interest to any refugee such as health centers, hospitals, UNHCR branches and offices in all cities of the Kingdom, and to ensure that war-torn families are reunited and unconnected the application user can search using the application for a member of his or her family or friends (Application users), connect with and meet them.\n\n

All information, data and services originating from the Office of the United Nations High Commissioner for Refugees (UNHCR) in Jordan and the Ministries of the Interior and Foreign Affairs, and any change in procedures or services at their source will be continuously updated to facilitate access to refugee services and information.\n\n

<b>Contact us by email:</b>\n refugees.team.info@gmail.com\n</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>
    <string name="contact">Contact</string>
    <string name="others">Others</string>
    <string name="notifications">Notifications</string>
    <string name="update_my_profile_info">Update My Profile Info</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="profile_updated">Profile Info Updated</string>
    <string name="check">Check if anyone of your family, your friends or anyone you know has used this app and send them a request to meet.</string>
    <string name="instructions">Instructions for all the paper works a refugee should do once he is in jordan so he can\'t miss a thing.</string>
    <string name="schools">EDUCATION</string>
    <string name="school">A detailed explanation of basic and university education options in Jordan.</string>
    <string name="hospital">List of health services for refugees and their locations.</string>
    <string name="UNs">UNHCR</string>
    <string name="UN">Offices, helpdesks and community support everything you need to know about them, detailed description, phone numbers and their locations</string>
    <string name="gc">List of the governmental circles in jordan and their locations.</string>
    <string name="hospitals">HEALTH\nSERVICES</string>
    <string name="place_holder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="settings_reset_password">Reset Password</string>
    <string name="choose_language">Choose Language:</string>
    <string name="update_email_msg">To change your email address, you need to enter your password.</string>
    <string name="your_password">Your Password</string>
    <string name="new_email">New Email</string>
    <string name="update">Update</string>
    <string name="password_not_match">Password not match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="notification_accept">accept your details request.</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="notification_request_msg">request to show your information.</string>
    <string name="request_for_info">Request For Info</string>
    <string name="cancel_info_request">Cancel Info Request</string>
    <string name="search_for_friends">Search For Friends..</string>
    <string name="info_req">Information Request</string>
    <string name="accepted_request">Accepted Request</string>
    <string name="send_verification_link">Send Verification Link</string>
    <string name="verify_dialog_msg">Seems your account isn\'t verify yet!</string>
    <string name="login">Login</string>
    <string name="reunion_warning_msg">To use this feature you need to create an account or login to your account.</string>
    <string name="login_register">Login / Register</string>
    <string name="reunion_your_n_family">REUNION YOUR\nFAMILY</string>
    <string name="profile_imag">Profile Image</string>
    <string name="pofile_image_error_msg">You have to choose profile image.</string>
    <string name="freinds">Friends</string>
    <string name="call">Call</string>
    <string name="send_mail">Send mail</string>
    <string name="offices">Offices</string>
    <string name="helpdesks">Helpdesks</string>
    <string name="community_support">Community Support</string>
    <string name="amman_branch_office">Amman Branch Office</string>
    <string name="serving_residents_of_central_and_southern_governorates">Serving residents of Central and Southern governorates</string>
    <string name="address_khalda_319_wasfi_al_tal_st_corner_george_musa_fram_st_amman_jordan"><b>Address:</b> Khalda, 319 Wasfi Al-Tal St. corner George Musa Fram St., Amman – Jordan</string>
    <string name="office_telephone_962_6_530_2000_noffice_fax_962_6_551_6742"><b>Office telephone:</b> +962-6-530 2000 <br /> <b>Office fax:</b> +962-6-551 6742</string>
    <string name="office_e_mail_joram_unhcr_org_nmailing_address_p_o_box_17101_amman_11195_jordan_noffice_working_hours_sunday_to_thursday_8am_to_3_45pm"><b>Office e-mail:</b> joram@unhcr.org <br /><b>Mailing address:</b> P.O. Box 17101 Amman 11195 Jordan <br /><b>Office working hours:</b> Sunday to Thursday, 8AM to 3:45PM</string>
    <string name="mail">mail</string>
    <string name="show_in_map">show in map</string>
    <string name="irbid_field_office">Irbid Field Office</string>
    <string name="serving_residents_of_irbid_jerash_and_ajloun_governorates">Serving residents of Irbid, Jerash and Ajloun governorates</string>
    <string name="address_zabda_farkouh_l701_p11_irbid_jordan"><b>Address:</b> Zabda Farkouh, L701, P11, Irbid – Jordan</string>
    <string name="office_telephone_962_2_720_1900_noffice_fax_962_2_724_9429"><b>Office telephone:</b> +962-2-720 1900\n<b>Office fax:</b> +962-2-724 9429</string>
    <string name="office_e_mail_jorir_unhcr_org_nmailing_address_p_o_box_3771_irbid_21110_jordan_noffice_working_hours_sun_to_thu_8_30am_to_4_15pm"><b>Office e-mail:</b> jorir@unhcr.org\n<b>Mailing address:</b> P.O. Box 3771 Irbid 21110 Jordan\n<b>Office working hours:</b> Sun to Thu, 8:30AM to 4:15PM</string>
    <string name="mafraq_sub_office">Mafraq Sub Office</string>
    <string name="serving_residents_of_mafraq_governorate">Serving residents of Mafraq governorate</string>
    <string name="address_hay_al_iskan_license_street_opposite_to_agriculture_directorate_mafraq_jordan"><b>Address:</b> Hay Al-Iskan, License Street, Opposite to Agriculture Directorate, Mafraq – Jordan</string>
    <string name="office_telephone_962_2_629_6000"><b>Office telephone:</b> +962-2-629 6000</string>
    <string name="zaatari_camp_office">Zaatari Camp Office</string>
    <string name="serving_residents_of_zaatari_camp">Serving residents of Zaatari Camp</string>
    <string name="azraq_camp_office">Azraq Camp Office</string>
    <string name="serving_residents_of_azraq_camp">Serving residents of Azraq Camp</string>
    <string name="address_azraq_highway_base_camp_azraq_jordan"><b>Address:</b> Azraq Highway, Base Camp, Azraq – Jordan</string>
    <string name="amman_sahab">Amman/Sahab</string>
    <string name="princess_basma_centre">Princess Basma Centre</string>
    <string name="services_issuance_of_registration_renewal_appointments_counselling_and_protection_services_n_naddress_sahab_hay_al_gharbi_n_noperating_every_thursday"><b>Services</b>: Issuance of registration/renewal appointments, counselling and protection services\n\n<b>Address</b>: Sahab, Hay Al Gharbi\n\nOperating every Thursday</string>
    <string name="amman_nuzha">Amman/Nuzha</string>
    <string name="services_counselling_and_protection_services_n_naddress_jabal_al_nuzha_behind_istiklal_mall_n_noperating_on_sunday_tuesday_and_thursday"><b>Services</b>: Counselling and protection services\n\n<b>Address</b>: Jabal Al Nuzha, behind Istiklal Mall\n\nOperating on Sunday, Tuesday and Thursday</string>
    <string name="zarqaa">Zarqaa</string>
    <string name="youth_self_development_association">Youth Self Development Association</string>
</resources>