<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_profile"
            android:title="@string/freinds" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_login"
            android:title="@string/login"/>
    </group>
</menu>