<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenFragments.UnhcrFragment"
    android:background="@color/blue_light">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/unhcr_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#4377C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/offices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offices" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/helper_desks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpdesks" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/community_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_support" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/unhcr_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unhcr_tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>