<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/quit"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/no"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/no"
        android:textColor="@color/blue_dark"
        app:cornerRadius="16dp"
        android:onClick="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/yes"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/yes"
        android:textColor="@color/blue_dark"
        app:cornerRadius="16dp"
        android:onClick="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>