<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:id="@+id/background"
    tools:context=".Login">



    <ImageView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:layout_marginTop="30dp"
        android:transitionName="logo"
        app:layout_constraintBottom_toTopOf="@+id/bottom_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/bottom_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bottom_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bottom_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bottom_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_forgot_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:gravity="top|start"
            android:text="@string/forgot_password"
            android:onClick="reset"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            android:textSize="16sp" />
        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_btn_bg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/log_in"
            android:textColor="@color/blue_dark"
            android:textSize="16sp"
            app:spinning_bar_color="@color/blue_dark"
            app:spinning_bar_padding="5dp"
            app:spinning_bar_width="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:paddingStart="1dp"
                android:paddingLeft="1dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/options_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="251dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_light">

        <Button
            android:id="@+id/login"
            android:layout_width="154dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/blue_dark"
            android:textSize="22sp"
            app:cornerRadius="13dp" />
        <Button
            android:id="@+id/signup"
            android:layout_width="154dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="#5F93E1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:cornerRadius="13dp" />

    </LinearLayout>

    <Button
        android:visibility="invisible"
        android:id="@+id/skip"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:backgroundTint="#3762A2"
        android:fontFamily="@font/roboto"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_log"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="1dp" />




    <LinearLayout
        android:id="@+id/reset"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            app:srcCompat="@drawable/reset" />

        <LinearLayout
            android:id="@+id/reset_inner_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/enter_your_email_address_please"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reset_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/your_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/reset_send_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_bg"
                android:gravity="center"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"
                app:spinning_bar_color="@color/blue_dark"
                app:spinning_bar_padding="5dp"
                app:spinning_bar_width="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/reset_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/we_send_you_link_to_reset_your_password_nplease_check_your_email_address_n"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>